# FatalEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Assets/: Monkey.glb
Scripts/: Basic.lua  FileReading.lua  Variable.lua
Shaders/: Default.frag.glsl  Default.frag.spv  Default.vert.glsl  Default.vert.spv  Model.frag.glsl  Model.vert.glsl  compile_shaders.py
Source/: EntryPoint.h
Source/Engine/: Defines.h  FatalPCH.h  Model.cpp  Model.h
Source/Engine/Core/: Application.cpp  Application.h  Asserts.h  Clock.cpp  Clock.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  PlatformLayer.h  WindowsLayer.cpp  WindowsLayer.h
Source/Engine/Editor/: Editor.cpp  Editor.h
Source/Engine/Renderer/: Backend.cpp  Backend.h  BufferObject.h  CommandPool.cpp  Descriptor.cpp  Device.cpp  Instance.cpp  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Shader.cpp  Swapchain.cpp  VulkanTypes.h
Source/Engine/Scripting/: ScriptingSystem.cpp  ScriptingSystem.h
Source/Testbed/: EntryPoint.cpp  Game.h
